--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div id="popup-content" class="container">
     <label class="switch"><input type="checkbox" id="arena"><span class="slider">Arena</span></label>
   <label class="switch"><input type="checkbox" id="otchłań"><span class="slider">Otchłań</span></label>
   <label class="switch"><input type="checkbox" id="SSJ"><span class="slider">SSJ</span></label>
